# COMET

./: README.md  app.py  cinstructions.txt  functions.py  requirements.txt  sinstructions.txt
COMET/: README.md  app.py  requirements.txt
COMET/cosmic/: functions.py  prompt.py
Comparison Research/: cosmic_SLR.xlsx
FLAM/: README.md  logger.py  loggersp.py  testAnalysis.py  testSplit.py
FLAM/test_set/: README.md
cosmic/: functions.py
datasets/: README.md
datasets/ALBERGATE/: ALBERGATE-MA.docx  ALBERGATE-UC.docx  README.md
datasets/AutomaticLineSwitching/: AutomaticLineSwitching-UC.docx  README.md
datasets/K01719/: K01719-MA.docx  K01719.UCR.01_en-UC.docx  README.md
datasets/K01726/: K01726-MA.docx  K01726.UCR.02_en-UC.docx  README.md
datasets/RQ2-RQ3/: K01720.UCR.01_en.docx  README.md
datasets/RiceCooker/: README.md  Rice cooker-UC.docx
datasets/U-CURE/: README.md  U-CURE-MA.docx  U-CURE-UC.docx
deepCOSMIC/: README.md  deep_learning_results.xlsx  pyproject.toml
deepCOSMIC/deepcosmic/: conv.py  deep_model.py  deep_model_time.py  helpers.py
metrics/: DG.py  DM.py  OOI.py  README.md
metrics/ALBERGATE/: ALBERGATE_DG.py  ALBERGATE_DM.py  ALBERGATE_FU.py  ALBERGATE_FU_updated.py  ALBERGATE_OOI.py  README.md
metrics/IoT microservices/: README.md
metrics/MAE/: MAE_COMET.xlsx  MAE_DEEP-COSMIC-UC.xlsx  MAE_RESULTS.xlsx  README.md  pyproject.toml
metrics/MAE/mae/: comet_mae.py
metrics/Realtime/: README.md
metrics/U-CURE/: README.md  (+4 more)
results/: AI.xlsx  IoT Microservices.xlsx  MIS.xlsx  README.md  RQ3_time.xlsx  Realtime.xlsx  Summary.xlsx
(+305 files in other folders)
